k8s-configs/ping-cloud/base/pingdelegator/server/cloud-generic/deployment.yaml
# This defines the Ping Delegated Admin deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingdelegator
spec:
  replicas: 2
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      role: pingdelegator
  template:
    metadata:
      name: pingdelegator
      annotations:
        lastUpdateReason: "NA"
      labels:
        role: pingdelegator
    spec:
      serviceAccount: ping-serviceaccount
      affinity:
        podAntiAffinity:
          # Add a soft requirement for each DA pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: role
                      operator: In
                      values:
                        - pingdelegator
                topologyKey: "topology.kubernetes.io/zone"
      containers:
      - name: pingdelegator
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
          allowPrivilegeEscalation: false
          privileged: false
        image: public.ecr.aws/r2h3l6e4/pingcloud-apps/pingdelegator/dev:v2.4-release-branch-latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "80m"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
          - name: pingdelegator-init
            mountPath: /opt/staging/hooks/logger.lib.sh
            subPath: logger.lib.sh
          - name: ssh-dir
            mountPath: /home/ping/.ssh
          - name: data-dir
            mountPath: /usr/local/bin/kubectl
            subPath: kubectl
          - name: data-dir
            mountPath: /opt/staging/ds_env_vars
            subPath: ds_env_vars
          - name: nginx-var-logs
            mountPath: /var/lib/nginx/logs
          - name: nginx-var-tmp
            mountPath: /var/lib/nginx/tmp
        readinessProbe:
          exec:
            command: [/opt/liveness.sh]
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [/opt/liveness.sh]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 4
          timeoutSeconds: 5
        ports:
          - name: https
            containerPort: 1443
        lifecycle:
          preStop:
            exec:
              command: [
                  # Gracefully shutdown nginx
                  "/bin/sh",
                  "-c",
                  "nginx -s quit",
                  "while killall -0 nginx; do sleep 1; done",
                ]
      securityContext:
        fsGroup: 9999
        runAsNonRoot: true
      volumes:
        - name: aws-config-dir
          emptyDir: {}
        - name: ssh-dir
          emptyDir: {}
        - name: data-dir
          emptyDir: {}
        - name: nginx-var-logs
          emptyDir: {}
        - name: nginx-var-tmp
          emptyDir: {}
        - name: pingdelegator-init
          configMap:
            name: pingcommon-init
            defaultMode: 0555
        - name: ssh-id-key-secret
          secret:
            secretName: ssh-id-key-secret
            optional: true
            defaultMode: 0400
        - name: known-hosts-config
          configMap:
            name: known-hosts-config
            optional: true
            defaultMode: 0644
