k8s-configs/ping-cloud/base/pingdelegator/server/cloud-generic/service.yaml
# This service exposes the Ping Delegated Admin ports within cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingdelegator
spec:
  ports:
  - port: 1443
    name: pingdelegator
    targetPort: https
  selector:
    role: pingdelegator
