k8s-configs/ping-cloud/base/pingdelegator/server/cloud-generic/ingress.yaml
# This defines the ingress for the Ping Delegated Admin service

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingdelegator-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  ingressClassName: nginx-private
  tls:
  - hosts:
    - pingdelegator-dev.ping-demo.com
  rules:
  - host: pingdelegator-dev.ping-demo.com
    http:
      paths:
      # This rule gives external access to the pingdelegator
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pingdelegator
            port:
              number: 1443
